# macero

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/esp_hidd/: esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_dev.c  hid_dev.h  hid_device_le_prf.c  hidd_le_prf_int.h
main/: CMakeLists.txt  beacon_flood.c  beacon_flood.h  ble.c  ble.h  captive_portal.c  captive_portal.h  dns_server.c  dns_server.h  hid_device.c  hid_device.h  macero.c  macero.h  utils.c  utils.h
main/data/: devices.h  devices.hpp  foogle.html  hid_report_map.h
