idf_component_register(SRCS 
                        "macero.c"
                        "ble.c"
                        "captive_portal.c"
                        "beacon_flood.c"
                        "dns_server.c"
                        "utils.c"
                    INCLUDE_DIRS 
                        "." 
                        "../components/ssd1306"
                    EMBED_FILES 
                        "./data/foogle.html"
                    REQUIRES
                        driver
                        bt
                        nvs_flash
                        esp_wifi
                        esp_event
                        esp_netif
                        esp_http_server
                        lwip
                        esp_hw_support
                        esp_hid
                        )
